--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Document</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Rajdhani&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -56,13 +57,41 @@
                 </svg>
 			</button>	
 		</div>
-		<div class="conteiner-block"></div>
-		<div class="conteiner-block"></div>
+		<div class="conteiner-block">
+			<button class="clear">
+				Clear Form
+				<svg class="clear__img">
+	                <use xlink:href="#clear" x="0" y="0">
+	            </use>
+                </svg>
+			</button>
+		</div>
+		<div class="conteiner-block">
+			<button class="start">
+				Start Now 
+				<svg class="start__img1">
+	                <use xlink:href="#start1" x="0" y="0">
+	            </use>
+                </svg>
+			</button>
+		</div>
 		<div class="conteiner-block"></div>
 	</main>
 
 
 <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+
+	<symbol id="start1" fill="none"  >
+		<path d="M1.08931 9.5H20.6595" stroke="#649CD3" stroke-linecap="square"/>
+		<path d="M11.1437 0.5L20.1437 9.5L11.1437 18.5" stroke="#649CD3"/>
+	</symbol>
+	<symbol id="start2" fill="none"  >
+		<path d="M1.17911 13H40.3194" stroke="#649CD3" stroke-linecap="square"/>
+		<path d="M31.1437 4L40.1437 13L31.1437 22" stroke="#649CD3"/>
+	</symbol>
+	<symbol id="clear" fill="none">
+		<path fill-rule="evenodd" clip-rule="evenodd" d="M6.42288 5.95093L0.516611 6.46477L0 0.589147L1.02719 0.5L1.38871 4.61068C3.13896 2.359 5.80952 1.03771 8.71908 1.03771C13.837 1.03771 18 5.17839 18 10.2689C18 15.3593 13.837 19.5 8.71908 19.5C5.49861 19.5 2.55501 17.8763 0.845001 15.1567L1.71911 14.6129C3.23873 17.0308 5.85608 18.4743 8.71898 18.4743C13.2679 18.4743 16.9687 14.7934 16.9687 10.2688C16.9687 5.74429 13.2679 2.06337 8.71898 2.06337C6.11079 2.06337 3.71889 3.25834 2.16305 5.29273L6.33327 4.93013L6.42288 5.95093Z" fill="#649CD3"/>
+	</symbol>
 	<symbol id="pen">
 		<path d="M10.4605 2.59242L13.3532 5.48512L6.12144 12.7169L3.22873 9.82419L10.4605 2.59242Z" fill="white"/>
 		<path d="M5.63932 13.199L2.74661 10.3063L2.26449 13.6811L5.63932 13.199Z" fill="white"/>
@@ -76,11 +105,11 @@
 		<path d="M7.83826 6.10895C7.83826 6.56333 7.83826 7.01939 7.83826 7.47378C7.83826 8.19811 7.83826 8.92244 7.83826 9.64677C7.83826 9.81108 7.83826 9.97707 7.83826 10.1414C7.83826 10.356 7.93396 10.5824 8.08778 10.7349C8.23646 10.8808 8.47914 10.9898 8.69277 10.9797C8.91324 10.9697 9.14225 10.8993 9.29777 10.7349C9.45158 10.5706 9.54729 10.3694 9.54729 10.1414C9.54729 9.68701 9.54729 9.23095 9.54729 8.77656C9.54729 8.05223 9.54729 7.3279 9.54729 6.60357C9.54729 6.43926 9.54729 6.27326 9.54729 6.10895C9.54729 5.89433 9.45158 5.66798 9.29777 5.5154C9.14909 5.36953 8.9064 5.26054 8.69277 5.2706C8.47231 5.28066 8.2433 5.35108 8.08778 5.5154C7.93396 5.67972 7.83826 5.88092 7.83826 6.10895Z" fill="white"/>
 	</symbol>
 
-	<symbol id="people">
+	<symbol id="people" fill="none">
 		<path d="M28 29V27C28 25.9391 27.5786 24.9217 26.8284 24.1716C26.0783 23.4214 25.0609 23 24 23H16C14.9391 23 13.9217 23.4214 13.1716 24.1716C12.4214 24.9217 12 25.9391 12 27V29" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
 		<path d="M20 19C22.2091 19 24 17.2091 24 15C24 12.7909 22.2091 11 20 11C17.7909 11 16 12.7909 16 15C16 17.2091 17.7909 19 20 19Z" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
 	</symbol>
-	<symbol id="arrow">
+	<symbol id="arrow" fill="none">
 		<path d="M13 20H27" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
 		<path d="M20 13L27 20L20 27" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
 	</symbol>
