--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
 
 		<div class="conteiner-block">
 			<button class="login">
-				Login
+				<p class="login-text">
+						Login
+				</p>
 				<svg class="people">
 	                <use xlink:href="#people" x="-5" y="-1">
 	            </use>
