--- a/index2.html
+++ b/index2.html
@@ -39,6 +39,20 @@
 				</div>
 			</div>
 		</form>
+		
+<form class="form-categories" action="formdata" method="post" name="form">
+		<h2 class="form-categories__caption">Subcategory </h2>
+	<p>	
+		<select class="form-categories__list1">
+			<option></option>
+			<option>Option</option>
+			<option>Textarea</option>
+			<option>Label</option>
+			<option>Fieldset</option>
+			<option>Legend</option>
+		</select>
+	</p>
+	</form>  
 	</div>
 
 	<svg width="28" height="24" viewBox="0 0 28 24" fill="none" xmlns="http://www.w3.org/2000/svg">	
