--- a/index2.html
+++ b/index2.html
@@ -100,15 +100,47 @@
 		<div class="check">
 			<label class="checkbox2">I accept the terms of service and privacy policy.
 			<input class="checkbox2-input" type="radio" checked="checked" name="radio">
-			<span class="checkmark2"></span>
+			<svg class="square">
+				<use xlink:href="#sq"  x="0" y="0">
+				</use>
+			</svg>
+			<svg class="ar">
+				<use xlink:href="#ar"  x="0" y="0">
+				</use>
+			</svg>
 			</label>
 			<label class="checkbox2">I accept the terms of service and privacy policy.
 			<input class="checkbox2-input" type="radio" name="radio">
-			<span class="checkmark2"></span>
+			<svg class="square">
+				<use xlink:href="#sq"  x="0" y="0">
+				</use>
+			</svg>
+			<svg class="ar">
+				<use xlink:href="#ar"  x="0" y="0">
+				</use>
+			</svg>
 			</label>
 		</div>
 
-		<div class="pentagon"></div>
+		<div class="check">
+			<label class="checkbox3">Industrial Specialist  - normal
+
+				<input class="checkbox3-input" type="radio" checked="checked" name="radio">
+				<span class="checkmark3"></span>
+			</label>
+
+			<label class="checkbox3">Advisory Specialist - checked
+				<input class="checkbox3-input" type="radio" name="radio">
+				<span class="checkmark3"></span>
+			</label>
+
+			<label class="checkbox3">Office Specialist  - hover/focus
+				<input class="checkbox3-input" type="radio" name="radio">
+				<span class="checkmark3"></span>
+			</label>
+		</div>
+
+
 	</div>
 
 	
@@ -129,6 +161,12 @@
 		<symbol id="man" fill="none">		
 			<path d="M28 29V27C28 25.9391 27.5786 24.9217 26.8284 24.1716C26.0783 23.4214 25.0609 23 24 23H16C14.9391 23 13.9217 23.4214 13.1716 24.1716C12.4214 24.9217 12 25.9391 12 27V29" stroke="#C2C2C2" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
 			<path d="M20 19C22.2091 19 24 17.2091 24 15C24 12.7909 22.2091 11 20 11C17.7909 11 16 12.7909 16 15C16 17.2091 17.7909 19 20 19Z" stroke="#C2C2C2" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+		</symbol>
+		<symbol id="sq" fill="none">
+			<path d="M19 10V17C19 17.5304 18.7893 18.0391 18.4142 18.4142C18.0391 18.7893 17.5304 19 17 19H3C2.46957 19 1.96086 18.7893 1.58579 18.4142C1.21071 18.0391 1 17.5304 1 17V3C1 2.46957 1.21071 1.96086 1.58579 1.58579C1.96086 1.21071 2.46957 1 3 1H14" stroke="#5C5C5C" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+		</symbol>
+		<symbol id="ar" fill="none">
+			<path d="M1 8L4 11L14 1" stroke="#5C5C5C" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
 		</symbol>
 
 	</svg>
