--- a/index2.html
+++ b/index2.html
@@ -102,18 +102,7 @@
 
 		<div class="check">
 			<label class="checkbox2">I accept the terms of service and privacy policy.
-				<input class="checkbox2-input" type="radio" checked="checked" name="radio">
-				<svg class="square">
-					<use xlink:href="#sq" x="0" y="0">
-					</use>
-				</svg>
-				<svg class="ar">
-					<use xlink:href="#ar" x="0" y="0">
-					</use>
-				</svg>
-			</label>
-			<label class="checkbox2">I accept the terms of service and privacy policy.
-				<input class="checkbox2-input" type="radio" name="radio">
+				<input class="checkbox2-input" type="checkbox" checked="checked" name="checkbox">
 				<svg class="square">
 					<use xlink:href="#sq" x="0" y="0">
 					</use>
