--- a/index2.html
+++ b/index2.html
@@ -150,17 +150,26 @@
 					</button>
 				</div>
 			</div>
-			<div class="img-conteiner">
-				<button class="circle">
-					<div class="plus">
-						+
-					</div>
-				</button>
-				<div class="caption">
-					Add photo or video
-				</div>
+
+
+			<div class="input-file">
+					<input type="file" name="file" id="file" class="input-file__input" />
+					<label class="input-file__square" for="file">		
+							
+					</label>
+					<label for="file" class="input-file__circle">	
+						+	
+					</label>
+					<label for="file" class="input-file__caption">	
+							Add photo or video
+					</label>
 			</div>
+
+						
 		</div>
+
+
+
 
 
 		<div class="check">
