--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 
 		<div class="conteiner-block">
 			<button class="login">
-				<p class="login-text">
+				<span class="login-text">
 					Login
-				</p>
+				</span>
 				<svg class="people">
 					<use xlink:href="#people" x="-5" y="-1">
 					</use>
@@ -75,9 +75,9 @@
 
 		<div class="conteiner-block">
 			<button class="start">
-				<p class="start__text">
+				<span class="start__text">
 					Start Now
-				</p>
+				</span>
 			<div class="draw-arrow">
 
 			</div>
@@ -86,9 +86,9 @@
 
 		<div class="conteiner-block">
 			<button disabled class="start">
-				<p class="start__text">
+				<span class="start__text">
 					Start Now
-				</p>
+				</span>
 			<div class="draw-arrow">
 
 			</div>
@@ -98,9 +98,9 @@
 
 		<div class="conteiner-block">
 			<button class="yesterday">
-				<p class="yesterday__paragraph">
+				<span class="yesterday__paragraph">
 					Get started yesterday
-				</p>
+				</span>
 				<svg class="yesterday__img">
 					<use xlink:href="#arrow" x="-5" y="-5	">
 					</use>
@@ -115,12 +115,12 @@
 					<use xlink:href="#apple" x="0" y="0">
 					</use>
 				</svg>
-				<p class="AppStore__paragraph">
+				<span class="AppStore__paragraph">
 					Get it from </br>
 					<span class="AppStore__paragraph-big">
 						App Store
 					</span>
-				</p>
+				</span>
 			</button>
 
 			<button class="WebApp">
@@ -128,15 +128,18 @@
 					<use xlink:href="#web" x="0" y="0">
 					</use>
 				</svg>
-				<p class="WebApp__paragraph">
+				<span class="WebApp__paragraph">
 					Open our </br>
 					<span class="AppStore__paragraph-big">
 						Web App
 					</span>
-				</p>
+				</span>
 			</button>
-
+			
 		</div>
+
+
+
 	</main>
 
 
