--- a/index2.html
+++ b/index2.html
@@ -183,7 +183,7 @@
 					<use xlink:href="#email" x="-0.5" y="4">
 					</use>
 				</svg>
-				<input class="decorating-form__submit" type="submit" value="Subscribe">
+				<button class="decorating-form__submit">Subscribe </button>
 			</form>
 
 		</div>
@@ -193,13 +193,13 @@
 		<div class="check">
 			<form class="decorating-form1">
 				<input class="decorating-form1__email" type="email" name="email" required placeholder="ENTER EMAIL">
-				<input class="decorating-form1__submit" type="submit" value="SUBSCRIBE">
-				<svg class="button">
-					<use xlink:href="#button" x="2" y="3">
-					</use>
-				</svg>
+				<button class="decorating-form1__submit">SUBSCRIBE 				
+					<svg class="button">				
+						<use xlink:href="#button" x="2" y="3">
+						</use>
+					</svg>
+				</button>
 			</form>
-
 		</div>
 	</div>
 
