--- a/index2.html
+++ b/index2.html
@@ -167,8 +167,8 @@
 			</fieldset>
 		</form>
 
-		<form class="check">
-			<fieldset class="check-conteiner">
+		<form class="forms">
+			<fieldset class="conteiner">
 				<div class="decorating-form">
 					<input class="decorating-form__email" type="email" name="email" required
 						placeholder="Input your business mail">
@@ -182,7 +182,7 @@
 
 
 
-			<fieldset class="check-conteiner">
+			<fieldset class="conteiner">
 				<div class="decorating-form1">
 					<input class="decorating-form1__email" type="email" name="email" required placeholder="ENTER EMAIL">
 					<button class="decorating-form1__submit">SUBSCRIBE
