--- a/index2.html
+++ b/index2.html
@@ -41,11 +41,11 @@
 
 
 			<fieldset class="form__section">
-				<svg class="form-man">
+				<svg class="form__man">
 					<use xlink:href="#man" x="0" y="0">
 					</use>
 				</svg>
-				<input class="form-name" type="text" required="" placeholder="First name" name="psw" />
+				<input class="form__name" type="text" required="" placeholder="First name" name="psw" />
 			</fieldset>
 		</form>
 
@@ -222,10 +222,10 @@
 		<symbol id="man" fill="none">
 			<path
 				d="M28 29V27C28 25.9391 27.5786 24.9217 26.8284 24.1716C26.0783 23.4214 25.0609 23 24 23H16C14.9391 23 13.9217 23.4214 13.1716 24.1716C12.4214 24.9217 12 25.9391 12 27V29"
-				stroke="#C2C2C2" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+				 stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
 			<path
 				d="M20 19C22.2091 19 24 17.2091 24 15C24 12.7909 22.2091 11 20 11C17.7909 11 16 12.7909 16 15C16 17.2091 17.7909 19 20 19Z"
-				stroke="#C2C2C2" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+				 stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
 		</symbol>
 		<symbol id="sq" fill="none">
 			<path
